@@ -17,7 +17,7 @@ any bootstrap replicate. If \code{NULL}, do not filter solutions.}
 \item{reorder}{Reorder results by bootstrap value.}
 }
 \value{
-Returns a \code{\link{runAbsoluteCN}} object with added a bootstrap 
+Returns a \code{\link{runAbsoluteCN}} object with added bootstrap 
 value to each solution. This value
 is the fraction of bootstrap replicates in which the solution ranked first.
 }
