@@ -8,7 +8,8 @@ preprocessIntervals(interval.file, reference.file, output.file = NULL,
   off.target = FALSE, average.target.width = 400,
   min.off.target.width = 20000, average.off.target.width = 2e+05,
   off.target.padding = -500, mappability = NULL, min.mappability = c(0.5,
-  0.1, 0.7), reptiming = NULL, off.target.seqlevels = c("targeted", "all"))
+  0.1, 0.7), reptiming = NULL, exclude = NULL,
+  off.target.seqlevels = c("targeted", "all"))
 }
 \arguments{
 \item{interval.file}{File specifying the intervals. Interval is expected in
@@ -45,6 +46,9 @@ treated differently. Requires \code{mappability}.}
 
 \item{reptiming}{Annotate intervals with replication timing score. Expected as 
 \code{GRanges} object with first meta column being the score.}
+
+\item{exclude}{Any target that overlaps with this \code{GRanges} object
+will be excluded.}
 
 \item{off.target.seqlevels}{Controls how to deal with chromosomes/contigs
 found in the \code{reference.file} but not in the \code{interval.file}.}
